<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_yt_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="k.freriks@saxion.nl">koen</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>robotiq_description</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
